[package]
name = "core"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = {path = "../../share_libs/proto"}
byteorder = { version = "1", default-features = false }
log = "0.3.0"
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"
util = { path = "../../share_libs/util" }
rustc-serialize = "0.3"
lru-cache = "0.1.1"
rlp = { path = "../../share_libs/rlp" }
rlp_derive = { path = "../../share_libs/rlp_derive" }
bloomchain = "0.1"
ethcore-bloom-journal = { path = "../../share_libs/bloom" }
bloomable = { path = "../../share_libs/bloomable" }
ethkey = { path = "../../share_libs/ethkey" }
lazy_static = "0.2"
bit-set = "0.4"
rust-crypto = "0.2.34"
num = "0.1"
num_cpus = "1.2"
rand = "0.3"
futures = "0.1"
bn = { git = "https://github.com/paritytech/bn", rev = "c9831a8d10d55045692394cbc10efe0321ddb16f" }
time = "0.1"
crossbeam = "0.2"
transient-hashmap = "0.4.0"

ethcore-io = { path = "../../share_libs/io" }
cita-ed25519 = { path = "../../share_libs/ed25519" }
cita-secp256k1 = { path = "../../share_libs/secp256k1" }
cita-crypto = { path = "../../share_libs/crypto" }
sha3 = { path = "../../share_libs/sha3" }

protobuf = { version = "^1.0.0"}
threadpool = "1.7.0"
pubsub = { path = "../../share_libs/pubsub" }
dotenv = "0.10.0"
proof = { path = "../../consensus/proof" }
common-types = { path = "../types" }
jsonrpc_types = { path = "../../jsonrpc/types"}
clippy = {version = "0.0.148", optional = true}

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
mktemp = "0.3.1"
logger =  { path = "../../share_libs/logger" }

[features]
default = []
evm-debug= []
dev = ["clippy"]
