[package]
name = "core"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
byteorder = { version = "1", default-features = false }
log = "0.3.0"
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rustc-serialize = "0.3"
lru-cache = "0.1.1"
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rlp_derive = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
bloomchain = "0.1"
ethcore-bloom-journal = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
bloomable = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
ethkey = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
lazy_static = "0.2"
bit-set = "0.4"
rust-crypto = "0.2.34"
num = "0.1"
num_cpus = "1.2"
rand = "0.3"
futures = "0.1"
bn = { git = "https://github.com/paritytech/bn", rev = "c9831a8d10d55045692394cbc10efe0321ddb16f" }
time = "0.1"
crossbeam = "0.2"
transient-hashmap = "0.4.0"

ethcore-io = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-ed25519 = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-secp256k1 = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
sha3 = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }

protobuf = { version = "^1.0.0"}
threadpool = "1.7.0"
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
dotenv = "0.10.0"
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
common-types = { path = "../types" }
jsonrpc_types = { path = "../../jsonrpc/types"}
clippy = {version = "0.0.175", optional = true}
ethabi = "4.2.0"

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
mktemp = "0.3.1"
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }

[features]
default = []
evm-debug= []
dev = ["clippy"]
