[package]
description = "block chain wraper."
name = "libchain"
version = "0.6.0"
authors = ["gguoss"]

[dependencies]
libproto = {path = "../../share_libs/proto"}
sha3 = {path = "../../share_libs/parity/util/sha3"}
protobuf = { version = "^1.0.0"}
threadpool = "1.3.2"
byteorder = { version = "1", default-features = false }
log = "0.3.0"
env_logger = "0.3"
pubsub = { path = "../../share_libs/pubsub" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vm = { path = "../../share_libs/vm" }
util = { path = "../../share_libs/util" }
dotenv = "0.10.0"
rustc-serialize = "0.3"
proof = { path = "../../consensus/proof" }
parking_lot = "0.4"
lru-cache = "0.1.1"
state = { path = "../state" }
serde_types = { path = "../../share_libs/serde_types" }
rlp = { path = "../../share_libs/parity/util/rlp" }
transaction = { path = "../../share_libs/transaction" }
bloomchain = "0.1"
jsonrpc_types = { path = "../../jsonrpc/types" }

[dev-dependencies]
cita-crypto = { path = "../../share_libs/crypto" }
rand = "0.3"
stainless = "0.1.11"
cpuprofiler = "0.0.3"
devtools = { path = "../../devtools" }
