[package]
name = "state"
version = "0.1.0"
authors = ["u2 <zhangyaning1985@gmail.com>"]

[dependencies]
libproto = {path = "../../share_libs/proto"}
byteorder = { version = "1", default-features = false }
log = "0.3.0"
env_logger = "0.3"
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
util = { path = "../../share_libs/util" }
rustc-serialize = "0.3"
lru-cache = "0.1.1"
rlp = { path = "../../share_libs/parity/util/rlp" }
bloomchain = "0.1"
ethcore-bloom-journal = { path = "../../share_libs/parity/util/bloom" }
ethkey = { path = "../../share_libs/parity/ethkey" }
lazy_static = "0.2"
bit-set = "0.4"
rust-crypto = "0.2.34"
num = "0.1"
num_cpus = "1.2"
rand = "0.3"
futures = "0.1"
bn = { git = "https://github.com/paritytech/bn" }
time = "0.1"
crossbeam = "0.2"
ethcore-io = { path = "../../share_libs/parity/util/io" }
transaction = { path = "../../share_libs/transaction" }
cita-crypto = { path = "../../share_libs/crypto" }

[dev-dependencies]
rand = "0.3"
stainless = "0.1.11"
cpuprofiler = "0.0.3"
devtools = { path = "../../devtools" }
protobuf = { version = "^1.0.0"}
