[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
rlp = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
bloomable = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
rustc-hex = "1.0"
