[package]
name = "core"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
lazy_static = "0.2"
time = "0.1"
crossbeam = "0.2"
transient-hashmap = "0.4.0"
cita-logger = "0.1.0"
common-types = { path = "../types" }

libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-ed25519 = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-secp256k1 = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-merklehash = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-database = { git = "https://github.com/cryptape/cita-database.git", branch = "develop" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
tempdir = "0.3.7"
cita-logger = "0.1.0"

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
