[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
rlp_derive = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
serde = "1.0"
serde_derive = "1.0"
bloomchain = "0.2"
lazy_static = "0.2"
time = "0.1"
cita-logger = "0.1.0"
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-database = { git = "https://github.com/cryptape/cita-database.git", branch = "develop" }

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash"]
