[package]
name = "core-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
byteorder = { version = "1", default-features = false }
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"
grpc = "0.5.0"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rustc-serialize = "0.3"
lru-cache = "0.1.1"
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rlp_derive = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
ethcore-bloom-journal = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
lazy_static = "0.2"
bit-set = "0.4"
rust-crypto = "0.2.34"
num = "0.1"
num_cpus = "1.2"
rand = "0.3"
time = "0.1"
crossbeam = "0.2"
crossbeam-channel = "0.2"
transient-hashmap = "0.4.0"

cita-ed25519 = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-secp256k1 = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }

proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
common-types = { path = "../../cita-chain/types" }
core = { path = "../../cita-chain/core" }
evm = { path = "../evm" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
ethabi = "4.2.0"
zktx = { git = "https://github.com/cryptape/zktx.git", optional = true }
enum_primitive = "0.1.1"
largest-remainder-method = "0.1"

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
tempdir = "0.3.7"

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1", "jsonrpc-types/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519", "jsonrpc-types/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2", "jsonrpc-types/sm2"]
sha3hash = ["util/sha3hash", "libproto/sha3hash", "proof/sha3hash", "jsonrpc-types/sha3hash"]
blake2bhash = ["util/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash", "jsonrpc-types/blake2bhash"]
sm3hash = ["util/sm3hash", "libproto/sm3hash", "proof/sm3hash", "jsonrpc-types/sm3hash"]
privatetx = ["zktx"]
evm-debug = ["evm/evm-debug"]
evm-debug-tests = ["evm-debug", "evm/evm-debug-tests"]

