[package]
name = "core-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
cita-logger = "0.1.0"
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
byteorder = { version = "1", default-features = false }
cita-merklehash = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
snappy = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
rustc-serialize = "0.3"
lru-cache = "0.1.1"
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
rlp_derive = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
lazy_static = "0.2"
bit-set = "0.4"
rust-crypto = "0.2.34"
num = "0.1"
rand = "0.3"
time = "0.1"
hex = "0.3"
crossbeam = "0.2"
crossbeam-channel = "0.2"
transient-hashmap = "0.4.0"

cita-ed25519 = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-secp256k1 = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-crypto-trait = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }

proof = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
common-types = { path = "../../cita-chain/types" }
core = { path = "../../cita-chain/core" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
ethabi = "4.2.0"
zktx = { git = "https://github.com/cryptape/zktx.git", optional = true }
enum_primitive = "0.1.1"
largest-remainder-method = "0.1"
cita-database = { git = "https://github.com/cryptape/cita-database.git", branch = "develop" }
parking_lot = "0.8"

cita-vm = { git = "https://github.com/cryptape/cita-vm.git", branch = "cita" }
cita_trie = "2.0"
numext-fixed-hash = "0.1"
numext-fixed-uint = "0.1"
ethbloom = "0.6"
sha3 = { version="0.8", optional=true }
tiny-keccak = { version="1.4", optional=true }

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
tempdir = "0.3.7"

[features]
default = ["secp256k1", "sha3hash", "hashlib-keccak"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
privatetx = ["zktx"]
hashlib-keccak = ["tiny-keccak"]
hashlib-sha3 = ["sha3"]
