[package]
name = "core-executor"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
cita-logger = "0.1.1"
byteorder = { version = "1", default-features = false }
bincode = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"
rustc-serialize = "0.3"
lru-cache = "0.1.1"
lazy_static = "1.4.0"
bit-set = "0.4"
rust-crypto = "0.2.34"
num = "0.1"
rand = "0.3"
time = "0.1"
hex = "0.3"
crossbeam-channel = "0.3.9"
transient-hashmap = "0.4.0"
ethabi = "4.2.0"
enum_primitive = "0.1.1"
largest-remainder-method = "0.1"
parking_lot = "0.8"
cita_trie = "2.0"
ethbloom = "0.6"
sha3 = { version="0.8", optional=true }
tiny-keccak = { version="1.4", optional=true }
hashbrown = { version = "0.3", features = ["rayon"] }
hasher = { version="0.1" }

common-types = { path = "../../cita-chain/types" }
core = { path = "../../cita-chain/core" }
cita-merklehash = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
snappy = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
hashable = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
util = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
rlp = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
libproto = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
proof = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
jsonrpc-types = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
zktx = { git = "https://github.com/citahub/zktx.git", optional = true }
cita-database = "0.1"

cita-ed25519 = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita-secp256k1 = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita-types = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita-crypto = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita-crypto-trait = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }

[dependencies.cita-vm]
git = "https://github.com/citahub/cita-vm.git"
branch = "cita"
default-features = false
features = ["sha3hash"]

[dev-dependencies]
rand = "0.3"
cpuprofiler = "0.0.3"
tempdir = "0.3.7"

[features]
default = ["secp256k1", "sha3hash", "hashlib-keccak"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2"]
sha3hash = ["hashable/sha3hash", "libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["hashable/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["hashable/sm3hash", "libproto/sm3hash", "proof/sm3hash"]
privatetx = ["zktx"]
hashlib-keccak = ["tiny-keccak"]
hashlib-sha3 = ["sha3"]
