[package]
name = "evm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
cita-logger = "0.1.0"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-db" }
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-db" }
lazy_static = "0.2"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-db" }
bit-set = "0.4"
common-types = { path = "../../cita-chain/types" }
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-db" }
rustc-hex = "1.0"
cita-database = { git = "https://github.com/cryptape/cita-database.git", branch = "develop" }

[features]
evm-debug = []
evm-debug-tests = ["evm-debug"]
