[package]
name = "rs-contracts"
version = "1.0.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rocksdb = "0.12.2"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
common-types = { path = "../../cita-chain/types" }
# core-executor = {path = "../core"}
rlp = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
byteorder = { version = "1", default-features = false }
cita-logger = "0.1.1"
sha3 = { version="0.8", optional=true }
tiny-keccak = "1.4.2"
hex = "0.4.0"

[dependencies.cita-vm]
git = "https://github.com/cryptape/cita-vm.git"
branch = "cita"
default-features = false
features = ["sha3hash"]
