[package]
name = "consensus_poa"
version = "0.6.0"
authors = []

[dependencies]
threadpool = "1.7.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8.0"
libproto = {path = "../../share_libs/proto"}
util = {path = "../../share_libs/util"}
error = {path = "../../share_libs/error"}
tx_pool = {path = "../../share_libs/tx_pool"}
rustc-serialize = "0.3"
protobuf = { version = "^1.0.0" }
cita-crypto = { path = "../../share_libs/crypto" }
engine_json = { path = "../json" }
engine = { path = "../engine" }
proof = { path = "../proof" }
log = "0.3.0"
clap = "2"
pubsub = { path = "../../share_libs/pubsub" }
cpuprofiler = "0.0.3"
logger = { path = "../../share_libs/logger" }
dotenv = "0.10.0"
authority_manage = { path = "../authority_manage" }
