[package]
name = "capnp-nonblock"
version = "0.3.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danburkert/capnp-nonblock"
documentation = "https://danburkert.github.io/capnp-nonblock/capnp_nonblock/index.html"
description = "A Cap'n Proto message serializer and deserializer that works with non-blocking streams."
keywords = ["capnproto", "mio", "async", "non-blocking"]

[dependencies]
capnp = "0.6"
byteorder = "0.4"

[dev-dependencies]
capnp = { version = "0.6", features = ["quickcheck"] }
quickcheck = "0.2"
