[package]
name = "proof"
version = "0.6.0"
authors = ["zhangsoledad <787953403@qq.com>"]

[dependencies]
libproto = {path = "../../share_libs/proto"}
cita-ed25519 = { path = "../../share_libs/ed25519" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8.0"
util = {path = "../../share_libs/util"}
rustc-serialize = "0.3"
