[package]
description = "CITA node."
name = "raft"
version = "0.6.0"

[dependencies]
dotenv = "0.10.0"
threadpool = "1.3.2"
libproto = {path = "../../share_libs/proto"}
libraft = {path = "libraft"}
protobuf = { version = "^1.0.0"}
log = "0.3.0"
scoped_log = "0.1"
docopt = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8.0"
rustc-serialize = "*"
mio = "0.5"
pubsub = { path = "../../share_libs/pubsub" }
logger = { path = "../../share_libs/logger" }
util = {path = "../../share_libs/util"}


[[bin]]
name = "raft"
path = "main.rs"

