[package]
name = "consensus_tendermint"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
threadpool = "1.7.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8.0"
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6a635aa" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "47da817" }
rustc-serialize = "0.3"
protobuf = { version = "^1.0.0" }
log = "0.3"
clap = "2"
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "3910698" }
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "b8a467c" }
proof = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "73f647c" }
time = "0.1.36"
engine_json = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6a635aa" }
engine = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "863d43e" }
lru-cache = "0.1"
logger = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "056d5bd" }
cpuprofiler = "0.0.3"
authority_manage = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "07cfa04" }
rustc-hex = "1.0"
clippy = {version = "0.0.175", optional = true}
