[package]
name = "consensus_tendermint"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
threadpool = "1.7.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8.0"
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
rustc-serialize = "0.3"
protobuf = { version = "^1.0.0" }
log = "0.3"
clap = "2"
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
proof = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
time = "0.1.36"
engine_json = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
engine = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
lru-cache = "0.1"
logger = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
cpuprofiler = "0.0.3"
authority_manage = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
rustc-hex = "1.0"
clippy = {version = "0.0.175", optional = true}
