[package]
name = "consensus_tendermint"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
threadpool = "1.7.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8.0"
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rustc-serialize = "0.3"
protobuf = { version = "^1.0.0" }
log = "0.3"
clap = "2"
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
time = "0.1.36"
engine_json = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
engine = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
lru-cache = "0.1"
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cpuprofiler = "0.0.3"
authority_manage = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
rustc-hex = "1.0"
clippy = {version = "0.0.175", optional = true}

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "proof/secp256k1", "engine_json/secp256k1", "engine/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "proof/ed25519", "engine_json/ed25519", "engine/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "proof/sm2", "engine_json/sm2", "engine/sm2"]
sha3hash = ["util/sha3hash", "libproto/sha3hash", "proof/sha3hash", "authority_manage/sha3hash", "engine_json/sha3hash", "engine/sha3hash"]
blake2bhash = ["util/blake2bhash", "libproto/blake2bhash", "proof/blake2bhash", "authority_manage/blake2bhash", "engine_json/blake2bhash", "engine/blake2bhash"]
sm3hash = ["util/sm3hash", "libproto/sm3hash", "proof/sm3hash", "authority_manage/sm3hash", "engine_json/sm3hash", "engine/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
