[package]
description = "CITA node."
name = "txpool"
version = "0.6.0"

[dependencies]
dotenv = "0.10.0"
threadpool = "1.3.2"
libproto = {path = "../../share_libs/proto"}
tx_pool = {path = "../../share_libs/tx_pool"}
util = {path = "../../share_libs/util"}
protobuf = { version = "^1.0.0"}
log = "0.3.0"
bincode = "0.8"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
pubsub = { path = "../../share_libs/pubsub" }
logger = { path = "../../share_libs/logger" }
engine = { path = "../engine" }

[[bin]]
path = "main.rs"
name = "txpool"

