[package]
name = "jsonrpc_types"
version = "0.1.0"
authors = ["u2 <zhangyaning1985@gmail.com>"]

[dependencies]
bincode = "0.8"
futures = "0.1"
hyper = "0.10"
libproto = { path = "../../share_libs/proto" }
protobuf = { version = "^1.0.0" }
uuid = { version = "0.4", features = ["v4"] }
log = "0.3"
util = { path = "../../share_libs/util"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"
pubsub = { path = "../../share_libs/pubsub" }
time = "0.1"
proof = { path = "../../consensus/proof" }
common-types = { path = "../../chain/types" }
cita-crypto = { path = "../../share_libs/crypto" }
clippy = {version = "0.0.148", optional = true}

[features]
default = []
